<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/your_secret_key"
        android:textSize="30sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hashed_key_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textIsSelectable="true"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/how_do_you_want_to_store_your_key"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:text="@string/export_to_file"
            android:textSize="12sp" />


        <Button
            android:id="@+id/exportsteg_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:text="@string/export_steganography"
            android:textSize="12sp" />
        <Button
            android:id="@+id/qr_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:text="@string/qr"
            android:textSize="12sp" />


        <!--<Button-->
        <!--android:id="@+id/exportqr_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_margin="7dp"-->
        <!--android:layout_weight="1"-->
        <!--&lt;!&ndash;android:background="@drawable/button_animation"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/export_qr"&ndash;&gt;-->
        <!--android:textSize="12sp"-->
        <!--tools:ignore="ButtonStyle" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/done"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>